set(COMPILER_FLAGS "${CH_CXX_FLAGS}")
set(LINKER_FLAGS "${CH_LINKERFLAG_EXE} ${CH_CVXOPT_LINK_FLAGS}" )
list(APPEND LIBRARIES "ChronoEngine;ChronoEngine_cvxopt;${CVXOPT_DEPENDENCY_LIBRARIES}")

INCLUDE_DIRECTORIES(${CH_INCLUDES} ${CH_CVXOPT_INCLUDE_DIRS})

SET(TESTS
    utest_CVXOPT_ConeQpEngine
)

MESSAGE(STATUS "Unit test programs for CVXOPT module...")

FOREACH(PROGRAM ${TESTS})
    MESSAGE(STATUS "...add ${PROGRAM}")

    ADD_EXECUTABLE(${PROGRAM}  "${PROGRAM}.cpp")
    SOURCE_GROUP(""  FILES "${PROGRAM}.cpp")

    SET_TARGET_PROPERTIES(${PROGRAM} PROPERTIES
        FOLDER demos
        COMPILE_FLAGS "${COMPILER_FLAGS}"
        COMPILE_DEFINITIONS "${CH_CVXOPT_DEFS}"
        LINK_FLAGS "${LINKER_FLAGS}"
    )

    TARGET_LINK_LIBRARIES(${PROGRAM} ${LIBRARIES} gtest_main)

    INSTALL(TARGETS ${PROGRAM} DESTINATION ${CH_INSTALL_DEMO})
    ADD_TEST(${PROGRAM} ${PROJECT_BINARY_DIR}/bin/${PROGRAM})
ENDFOREACH(PROGRAM)